# lang_recog

language_detect/: LICENSE.txt  README.md  setup.cfg
language_detect/docs/: guide.txt
language_detect/src/language_recog.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
language_detect/src/reco_lang/: get_lang.py
language_detect/tests/: tests.py
