[metadata]
name = language_recog
version = 0.0.1
author = Michael Shpilevsky
author_email = miduibwqbdhbuqwidwqdqwdxq@gmail.com
description = This package make recognizing the language easyer
long_description = This package makes recognizing the language easyer,I recomend it to use with googletrans
long_description_content_type = text/markdown
url = https://github.com/Nicheye/get_lang
project_urls =
    Bug Tracker = package issues url
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src